MB-50888: Cancel compaction if vbucket is awaiting deferred deletion

ns_server may request DELETE_VBUCKET with sync=true. The corresponding
cookie will be blocked until the last shared_ptr to the vbucket is
destroyed, and the deferred deletion task has been scheduled and run.

If compaction is currently running for the affected vbucket, the vbs
life will be extended by a shared_ptr.

This means compaction can delay sync vbucket deletion calls, causing
ns_server to time out in certain situations, for example, in
prepare_delete_recovery.

Change-Id: Ie2232b83d0d3c96c1dbc2361d9537839448c5f05
Reviewed-on: https://review.couchbase.org/c/kv_engine/+/170662
Reviewed-by: Ben Huddleston <ben.huddleston@couchbase.com>
Tested-by: Build Bot <build@couchbase.com>